# practicecal

./: Dockerfile  README.md  TODO.md  fly.toml  pyproject.toml
app/: dependencies.py  main.py
app/ui/: index.html  project.html  style.css
docs/: backend.md  frontend.md  improvements.md  techstack.md
tests/: test_main.py
