[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pytest>=8.4.2",
    "strawberry-graphql[fastapi]>=0.282.0",
    "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
